--- a/requirements.txt
+++ b/requirements.txt
@@ -10,20 +10,20 @@ cachetools==3.1.1
 certifi==2019.9.11
 cffi==1.13.2
 chardet==3.0.4
+Click==7.0
 colorama==0.4.1
 constantly==15.1.0
 cryptography==2.8
 cssselect==1.1.0
 decorator==4.4.1
-Django==2.2.7
 django-compat==1.0.15
 docutils==0.15.2
 dotmap==1.3.8
 elasticsearch==7.0.5
 extraction==0.3
-Flask==1.1.1
 feedfinder2==0.0.4
 feedparser==5.2.1
+Flask==1.1.1
 google-api-core==1.14.3
 google-auth==1.6.3
 google-auth-oauthlib==0.4.1
@@ -31,6 +31,7 @@ google-cloud-bigquery==1.21.0
 google-cloud-core==1.0.3
 google-resumable-media==0.4.1
 googleapis-common-protos==1.6.0
+gunicorn==19.9.0
 hjson==3.0.1
 html5lib==1.0.1
 hurry.filesize==0.9
@@ -39,11 +40,14 @@ idna==2.8
 incremental==17.5.0
 ipython==7.9.0
 ipython-genutils==0.2.0
+itsdangerous==1.1.0
 jedi==0.15.1
 jieba3k==0.35.1
+Jinja2==2.10.3
 jmespath==0.9.4
 langdetect==1.0.7
 lxml==4.4.1
+MarkupSafe==1.1.1
 news-please==1.4.23
 newspaper3k==0.2.8
 nltk==3.4.5
@@ -69,6 +73,7 @@ PyHamcrest==1.9.0
 PyMySQL==0.9.3
 pyOpenSSL==19.0.0
 python-dateutil==2.8.1
+python-http-client==3.2.1
 pytz==2019.3
 PyYAML==5.1.2
 queuelib==1.5.0
@@ -93,4 +98,5 @@ w3lib==1.21.0
 warcio==1.7.1
 wcwidth==0.1.7
 webencodings==0.5.1
+Werkzeug==0.16.0
 zope.interface==4.6.0
